--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "~3.8.12",
     "morgan": "~1.0.0",
     "passport": "~0.2.0",
+    "passport-facebook": "^2.1.0",
     "passport-local": "~1.0.0",
     "static-favicon": "~1.0.0"
   }
